--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,10 @@ sysinfo.txt
 
 # Crashlytics generated file
 crashlytics-build.properties
+WGJ2022/.DS_Store
+WGJ2022/Assets/.DS_Store
+WGJ2022/Library/.DS_Store
+WGJ2022/Library/Bee/.DS_Store
+WGJ2022/Library/PackageCache/.DS_Store
+WGJ2022/Library/PackageCache/com.unity.visualscripting@1.7.8/.DS_Store
+WGJ2022/Library/PackageCache/com.unity.visualscripting@1.7.8/Editor/.DS_Store
