--- a/.gitignore
+++ b/.gitignore
@@ -64,3 +64,4 @@ WGJ2022/Library/Bee/.DS_Store
 WGJ2022/Library/PackageCache/.DS_Store
 WGJ2022/Library/PackageCache/com.unity.visualscripting@1.7.8/.DS_Store
 WGJ2022/Library/PackageCache/com.unity.visualscripting@1.7.8/Editor/.DS_Store
+.DS_Store
